# dth-old

./: Cargo.toml  README.md  TODO.md
res/bitmaps/frigate/: diffuse.dds  emissive.dds  normal.dds  specular.dds
res/models/: cube.dae  frigate.dae
res/shaders/: basic_chunk_wgpu.frag.spv  basic_chunk_wgpu.vert.glsl.spv  basic_chunk_wgpu.vert.spv  blur.frag.glsl.spv  blur.vert.glsl.spv  hdr.frag.glsl.spv  hdr.vert.glsl.spv  static_material.frag.glsl.spv  static_material.vert.glsl.spv  static_material_wgpu.frag.glsl.spv
shader_src/: basic_chunk_wgpu.frag.glsl  basic_chunk_wgpu.vert  basic_chunk_wgpu.vert.glsl  blur.frag.glsl  blur.vert.glsl  compile_shaders.py  hdr.frag.glsl  hdr.vert.glsl  static_material.frag.glsl  static_material.vert.glsl  static_material_wgpu.frag.glsl
src/: lib.rs
src/collections/: bitmap.rs  cube_map.rs  hash_pool.rs  mod.rs  packed_int_vec.rs  palette_vec.rs  pool.rs  xorhash.rs
src/engine/: actor.rs  geometry.rs  input.rs  mesh.rs  mod.rs
src/game/: camera.rs  entity.rs  mod.rs  prefab.rs  scene.rs
src/gfx/: bitmap.rs  chunk_mesher.rs  collada.rs  collada_parser.rs  frustum.rs  mesh.rs  mesher.rs  mod.rs  scene.rs
src/math/: matrix.rs  mod.rs  quaternion.rs  triangle.rs  vector.rs
src/tile/: mod.rs
src/util/: io.rs  mod.rs
src/voxel/: chunk.rs  chunk_mesher.rs  mod.rs  tile.rs
src/world/: chunk.rs
