[package]
name = "dth"
version = "0.1.0"
authors = ["lavignes"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
# Technically just the frontend-specific deps
wgpu = { version = "0.6.2", features = ["vulkan-portability"] }
sdl2 = { version = "0.34.3", features = ["raw-window-handle", "mixer"] }
env_logger = "0.8.2"

bitflags = "1.2.1"
bytemuck = "1.4.1"
futures = "0.3.8"
log = "0.4.11"
rand = "0.8.0"
smallvec = "1.6.0"
xml-rs = "0.8.3"