[package]
name = "dth"
version = "0.1.0"
authors = ["lavignes"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
# Technically just the frontend-specific deps
wgpu = { version = "0.7.1", features = ["vulkan-portability"] }
sdl2 = { version = "0.34.4", features = ["raw-window-handle", "mixer"] }
env_logger = "0.8.3"

bitflags = "1.2.1"
bytemuck = "1.5.1"
futures = "0.3.14"
log = "0.4.14"
rand = "0.8.3"
smallvec = "1.6.1"
xml-rs = "0.8.3"